--- a/index.html
+++ b/index.html
@@ -311,6 +311,74 @@
             </div>
         </div>
     </div>
+
+    <!-- Success Modal -->
+    <div id="successModal" class="hidden fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 backdrop-blur-sm">
+        <div class="bg-white rounded-3xl shadow-2xl p-8 max-w-md w-full mx-4 transform transition-all scale-95 opacity-0" id="modalContent">
+            <!-- Success Icon -->
+            <div class="flex justify-center mb-6">
+                <div class="relative">
+                    <div class="w-24 h-24 bg-green-100 rounded-full flex items-center justify-center animate-bounce">
+                        <svg class="w-12 h-12 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path>
+                        </svg>
+                    </div>
+                    <div class="absolute -top-1 -right-1 w-8 h-8 bg-orange-500 rounded-full flex items-center justify-center animate-ping">
+                        <span class="text-white text-xl">✓</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Success Message -->
+            <div class="text-center mb-6">
+                <h3 class="text-2xl font-bold text-gray-800 mb-3">تم إرسال طلبك بنجاح! 🎉</h3>
+                <p class="text-gray-600 text-lg leading-relaxed">
+                    شكراً لثقتك بنا! سنتواصل معك قريباً لتأكيد الطلبية
+                </p>
+            </div>
+
+            <!-- Order Details -->
+            <div class="bg-gradient-to-r from-orange-50 to-yellow-50 rounded-2xl p-4 mb-6">
+                <div class="flex items-center justify-between mb-2">
+                    <span class="text-gray-600">رقم الطلبية</span>
+                    <span class="font-bold text-orange-600" id="orderNumber">#SO-12345</span>
+                </div>
+                <div class="flex items-center justify-between">
+                    <span class="text-gray-600">حالة الطلب</span>
+                    <span class="flex items-center gap-2 text-green-600 font-semibold">
+                        <span class="w-2 h-2 bg-green-500 rounded-full animate-pulse"></span>
+                        قيد المعالجة
+                    </span>
+                </div>
+            </div>
+
+            <!-- Action Buttons -->
+            <div class="flex gap-3">
+                <button onclick="closeSuccessModal()" class="flex-1 bg-gradient-to-r from-orange-500 to-orange-600 text-white py-3 px-6 rounded-xl font-semibold hover:from-orange-600 hover:to-orange-700 transition-all duration-300 transform hover:scale-105 shadow-lg">
+                    حسناً
+                </button>
+                <button onclick="window.location.reload()" class="flex-1 border-2 border-orange-500 text-orange-500 py-3 px-6 rounded-xl font-semibold hover:bg-orange-50 transition-all duration-300">
+                    طلب جديد
+                </button>
+            </div>
+
+            <!-- Social Share -->
+            <div class="mt-6 pt-6 border-t border-gray-200">
+                <p class="text-center text-sm text-gray-500 mb-3">شارك مع أصدقائك</p>
+                <div class="flex justify-center gap-3">
+                    <a href="#" class="w-10 h-10 bg-green-500 rounded-full flex items-center justify-center text-white hover:bg-green-600 transition-all duration-300 transform hover:scale-110">
+                        <i class="fab fa-whatsapp text-lg"></i>
+                    </a>
+                    <a href="#" class="w-10 h-10 bg-blue-500 rounded-full flex items-center justify-center text-white hover:bg-blue-600 transition-all duration-300 transform hover:scale-110">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="w-10 h-10 bg-blue-400 rounded-full flex items-center justify-center text-white hover:bg-blue-500 transition-all duration-300 transform hover:scale-110">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     
     <script src="script.js"></script>
 </body>
