--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1171982918188741');
-    // PageView tracking removed - only tracking Purchase events
+    fbq('track', 'PageView');
     </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1171982918188741&ev=PageView&noscript=1"
+    /></noscript>
     <!-- End Meta Pixel Code -->
     
     <script src="https://cdn.tailwindcss.com"></script>
