--- a/index.html
+++ b/index.html
@@ -551,6 +551,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="script.js?v=2.0"></script>
 </body>
 </html>
